--- a/src/WrldcHrIs.WebApp/WrldcHrIs.WebApp.csproj
+++ b/src/WrldcHrIs.WebApp/WrldcHrIs.WebApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -6,7 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.6" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WrldcHrIs.Application\WrldcHrIs.Application.csproj" />
+    <ProjectReference Include="..\WrldcHrIs.Infra\WrldcHrIs.Infra.csproj" />
   </ItemGroup>
 
 </Project>
