--- a/src/WrldcHrIs.WebApp/appsettings.json
+++ b/src/WrldcHrIs.WebApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "connString"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
