user seeding started

--- a/src/WrldcHrIs.WebApp/appsettings.json
+++ b/src/WrldcHrIs.WebApp/appsettings.json
@@ -9,5 +9,24 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "EmailSettings": {
+    "Username": "u",
+    "Password": "p",
+    "Domain": "d",
+    "MailAddress": "m",
+    "HostName": "h"
+  },
+  "SmsSettings": {
+    "Username": "u",
+    "Password": "p"
+  },
+  "IdentityInit": {
+    "AdminEmail": "abc@abc.com",
+    "AdminPassword": "pass@345",
+    "AdminUserName": "abcd",
+    "GuestEmail": "def@def.com",
+    "GuestPassword": "pass@678",
+    "GuestUserName": "def"
+  },
   "AllowedHosts": "*"
 }
