--- a/src/WrldcHrIs.Application/WrldcHrIs.Application.csproj
+++ b/src/WrldcHrIs.Application/WrldcHrIs.Application.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\WrldcHrIs.Core\WrldcHrIs.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="CanteenOrders\" />
+  </ItemGroup>
+
 </Project>
